--- a/settings/internal/com.kms.katalon.execution.webui.properties
+++ b/settings/internal/com.kms.katalon.execution.webui.properties
@@ -1,2 +1,9 @@
-#Fri Aug 07 16:30:53 EDT 2020
+#Thu Aug 27 12:02:06 IST 2020
 execution.default.selectingCapturedObjectSelectorMethod="XPATH"
+execution.default.imageRecognitionEnabled=false
+execution.default.webUi.enablePageLoadTimeout=false
+execution.default.webUi.pageLoadTimeout=30
+execution.default.webUi.ignorePageLoadTimeOutException=false
+execution.default.useDelayActionInSecond="SECONDS"
+execution.default.webUi.actionDelay=1
+execution.default.waitForIEHanging=600
